tests/specs/fmt/parse_error/parse_error.out
Error formatting: [WILDCARD]parse_error.ts
   Expected '{', got '<eof>' at [WILDCARD]parse_error.ts:2:7

  class Test
        ~~~~
error: Failed to format 1 file in 1 file
